--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -19,15 +19,15 @@ p {
 }
 
 body {
-  color: var(--primary-text-color);
-  background-color: var(--primary-white-color);
+  color: $primary-text-color;
+  background-color: $primary-white-color;
   font-family: "Roboto", sans-serif;
   margin: 0;
 }
 
 a {
   text-decoration: none;
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
   margin: 0;
   padding: 0;
 }
