--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -10,7 +10,7 @@
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
   text-align: center;
 }
 
