--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -64,7 +64,7 @@
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
   text-transform: uppercase;
 }
 
@@ -73,5 +73,5 @@
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
 }
