--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -25,32 +25,11 @@
 
 .hero-title {
   margin-bottom: 30px;
-  color: var(--primary-white-color);
+  color: $primary-white-color;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-}
-
-.button {
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-
-  font-family: var(--primary-text-color);
-  color: #ffffff;
-  font-family: "Roboto", sans-serif;
-  width: 200px;
-  height: 50px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-
-  background: #2196f3;
-  border: 1px solid var(--accent-color);
-  border-radius: 4px;
-  cursor: pointer;
 }
