--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,13 +1,35 @@
+/* header logo */
+
 .header-logo {
   margin: 25px 93px 25px 0px;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
   font-family: "Raleway", sans-serif;
 }
 
 .web {
-  color: var(--accent-color);
+  color: $accent-color;
+}
+
+/* footer logo */
+
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  font-family: "Raleway", sans-serif;
+}
+
+.web {
+  color: $accent-color;
+}
+
+.logo-white {
+  color: #ffffff;
 }
