--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -26,7 +26,7 @@
   font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
   text-align: center;
 }
 
@@ -36,7 +36,7 @@
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
   text-align: center;
 }
 
@@ -46,7 +46,7 @@
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
   text-align: center;
 }
 
