--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,31 +1,30 @@
 /* Advantage (Преимущества) */
 
-.section.section-advantages {
-  margin-top: 0px;
-}
+.advantages {
+  &-section {
+    margin-top: 0px;
+  }
 
-.advantages-title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  color: $primary-text-color;
-  text-align: center;
-}
+  &-list {
+    display: flex;
+    list-style: none;
+  }
 
-.advantages-list {
-  display: flex;
-  list-style: none;
-}
+  &-item {
+    position: relative;
+    width: calc((100% - 60px) / 3);
+  }
 
-.advantages-item {
-  position: relative;
-  width: calc((100% - 60px) / 3);
-}
+  &-title {
+    margin-bottom: 50px;
+    @include fonts(700, 36px, 1.16, 0.03em);
+    color: $primary-text-color;
+    text-align: center;
+  }
 
-.advantages-item:not(:last-child) {
-  margin-right: 30px;
+  &-item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .label::before {
@@ -47,11 +46,8 @@
   margin: 0;
 
   width: 100%;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
+  @include fonts(700, 14px, 1.14, 0.03em);
   text-align: center;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
 }
