--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -10,10 +10,8 @@
   font-family: "Roboto", sans-serif;
   width: 200px;
   height: 50px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
+
+  @include fonts(700, 16px, 1.88, 0.06em);
 
   background: #2196f3;
   border: 1px solid $accent-color;
@@ -31,20 +29,24 @@
   margin-left: auto;
   margin-right: auto;
   padding: 0;
+
   font-family: $primary-text-color;
   color: #ffffff;
   font-family: "Roboto", sans-serif;
   width: 200px;
   height: 50px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
+
+  @include fonts(700, 16px, 1.88, 0.06em);
 
   background: #2196f3;
   border: 1px solid $accent-color;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.buttons-sub {
+  vertical-align: middle;
+  fill: $primary-white-color;
 }
 
 /* Кнопки (Портфолио) */
@@ -62,10 +64,7 @@
 .button-filter {
   display: inline-block;
   padding: 6px 22px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  letter-spacing: 0.03em;
+  @include fonts(500, 16px, 1.6, 0.03em);
   font-family: inherit;
   color: $primary-text-color;
   border: 1px solid #f5f4fa;
@@ -78,8 +77,9 @@
 .button-filter:focus {
   background-color: $accent-color;
   color: $primary-white-color;
-  border-color: var(--accent-color);
+  border-color: $accent-color;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @include transition(all);
 }
