--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,18 +1,16 @@
 /* Постоянные клиенты */
+.clients {
+  &-list {
+    display: flex;
+    justify-content: space-between;
+  }
 
-.clients-title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  color: $primary-text-color;
-  text-align: center;
-}
-
-.clients-list {
-  display: flex;
-  justify-content: space-between;
+  &-title {
+    margin-bottom: 50px;
+    @include fonts(700, 36px, 1.16, 0.03em);
+    color: $primary-text-color;
+    text-align: center;
+  }
 }
 
 .clients-logo {
@@ -24,18 +22,18 @@
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
-}
 
-.clients-logo:hover .logo-icon,
-.clients-logo:focus .logo-icon {
-  fill: $accent-color;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &:hover .logo-icon,
+  &:focus .logo-icon {
+    fill: $accent-color;
+    @include transition;
+  }
 
-.clients-logo:hover,
-.clients-logo:focus {
-  border-color: $accent-color;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    border-color: $accent-color;
+    @include transition(border-color);
+  }
 }
 
 .logo-icon {
