--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,6 +1,6 @@
 /* Features (Особенности) */
 
-.section-features {
+.features-section {
   padding-bottom: 0;
 }
 
@@ -9,12 +9,32 @@
   list-style: none;
 }
 
+.features-title-item {
+  margin-bottom: 10px;
+  @include fonts(700, 14px, 1.14, 0.03em);
+  color: $primary-text-color;
+  text-transform: uppercase;
+}
+
+.features-text {
+  @include fonts(400, 14px, 1.71, 0.03em);
+  color: $secondary-text-color;
+}
+
 .features-item {
   width: calc((100% - 90px) / 4);
 }
 
 .features-item:not(:last-child) {
   margin-right: 30px;
+}
+
+.features-icons-item {
+  display: block;
+  width: 65px;
+  height: 70px;
+  padding: 0;
+  border: none;
 }
 
 .features-item::before {
@@ -48,30 +68,4 @@
   background-image: url("../images/icons/icons-features/astronaut.svg");
   background-repeat: no-repeat;
   background-position: center;
-}
-
-.features-icons-item {
-  display: block;
-  width: 65px;
-  height: 70px;
-  padding: 0;
-  border: none;
-}
-
-.features-title-item {
-  margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  color: $primary-text-color;
-  text-transform: uppercase;
-}
-
-.features-text {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: $secondary-text-color;
 }
