--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,87 +4,52 @@
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: $secondary-black-color;
-}
 
-.footer-container {
-  justify-content: space-between;
-  display: flex;
-}
+  .address {
+    @include fonts(400, 14px, 1.71, 0.03em);
+    color: #ffffff;
+  }
 
-.address {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-}
+  .footer-container {
+    justify-content: space-between;
+    display: flex;
+  }
 
-.footer-link {
-  display: inline-block;
-  margin-top: 9px;
-  color: rgba(255, 255, 255, 0.6);
-}
+  .footer-link {
+    display: inline-block;
+    margin-top: 9px;
+    color: rgba(255, 255, 255, 0.6);
+  }
 
-.footer-socials {
-  margin-left: 70px;
-}
+  .footer-socials {
+    margin-left: 70px;
+  }
 
-.footer-title {
-  margin-top: 12px;
-  margin-bottom: 20px;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
+  .footer-title {
+    margin-top: 12px;
+    margin-bottom: 20px;
+    @include fonts(700, 14px, 1.14, 0.03em);
+    text-transform: uppercase;
+    color: #ffffff;
+  }
 
-.futter-sub {
-  margin-left: 93px;
-}
+  .futter-sub {
+    margin-left: 93px;
+  }
 
-.form-input-footer {
-  margin-right: 12px;
-  width: 358px;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background: #2f303a;
-  font-size: 16px;
-  line-height: 20px;
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.button-sub {
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0;
-  font-family: $primary-text-color;
-  color: #ffffff;
-  font-family: "Roboto", sans-serif;
-  width: 200px;
-  height: 50px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-
-  background: #2196f3;
-  border: 1px solid $accent-color;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.buttons-sub {
-  vertical-align: middle;
-  fill: $primary-white-color;
+  .form-input-footer {
+    margin-right: 12px;
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background: #2f303a;
+    font-size: 16px;
+    line-height: 20px;
+    align-items: center;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+  }
 }
