--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,10 +2,7 @@
 
 .header-logo {
   margin: 25px 93px 25px 0px;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+  @include fonts(700, 26px, 1.19, 0.03em);
   color: $primary-text-color;
   font-family: "Raleway", sans-serif;
 }
@@ -19,10 +16,7 @@
 .footer-logo {
   display: inline-block;
   margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+  @include fonts(700, 26px, 1.19, 0.03em);
   font-family: "Raleway", sans-serif;
 }
 
