--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -5,7 +5,8 @@
   letter-spacing: $ls;
 }
 
-@mixin transition($td: 250ms, $ttf: cubic-bezier(0.4, 0, 0.2, 1)) {
+@mixin transition($tp: fill, $td: 250ms, $ttf: cubic-bezier(0.4, 0, 0.2, 1)) {
+  transition-property: $tp;
   transition-duration: $td;
   transition-timing-function: $ttf;
 }
