--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,7 +1,7 @@
 /* header logo */
 
 .header-logo {
-  margin: 25px 93px 25px 0px;
+  // margin: 25px 93px 25px 0px;
   @include fonts(700, 26px, 1.19, 0.03em);
   color: $primary-text-color;
   font-family: "Raleway", sans-serif;
@@ -14,8 +14,8 @@
 /* footer logo */
 
 .footer-logo {
-  display: inline-block;
-  margin-bottom: 20px;
+  // display: inline-block;
+  // margin-bottom: 20px;
   @include fonts(700, 26px, 1.19, 0.03em);
   font-family: "Raleway", sans-serif;
 }
