--- a/CSS/main.css
+++ b/CSS/main.css
@@ -345,6 +345,24 @@ img {
   vertical-align: baseline;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -352,7 +370,6 @@ img {
 
 /* header logo */
 .header-logo {
-  margin: 25px 93px 25px 0px;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -367,8 +384,6 @@ img {
 
 /* footer logo */
 .footer-logo {
-  display: inline-block;
-  margin-bottom: 20px;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -382,6 +397,12 @@ img {
 
 .logo-white {
   color: #ffffff;
+}
+
+@media screen and (max-width: 1199px) {
+  .nav-header {
+    display: none;
+  }
 }
 
 .header {
@@ -531,15 +552,9 @@ img {
 /* Hero (Герой) */
 .hero {
   background: #c4c4c4;
-  text-align: center;
-  padding: 200px 0;
 }
 
 .hero-overlay {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 600px;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
@@ -548,7 +563,6 @@ img {
 }
 
 .hero-title {
-  margin-bottom: 30px;
   color: #ffffff;
   font-weight: 900;
   font-size: 44px;
@@ -1051,62 +1065,64 @@ img {
 }
 
 /* Advantage (Преимущества) */
-.advantages-section {
-  margin-top: 0px;
+@media screen and (max-width: 1199px) {
+  .advantages {
+    display: none;
+  }
 }
 
-.advantages-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-}
-
-.advantages-item {
-  position: relative;
-  width: calc((100% - 60px) / 3);
-}
-
-.advantages-title {
-  margin-bottom: 50px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  color: #212121;
-  text-align: center;
-}
-
-.advantages-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.label::before {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 70px;
-  background: rgba(47, 48, 58, 0.8);
-  bottom: 0;
-}
-
-.label-text {
-  position: absolute;
-  padding-top: 27px;
-  padding-bottom: 27px;
-  bottom: 0;
-  margin: 0;
-  width: 100%;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-align: center;
-  text-transform: uppercase;
-  color: #ffffff;
+@media screen and (min-width: 1200px) {
+  .advantages-section {
+    margin-top: 0px;
+  }
+  .advantages-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    list-style: none;
+  }
+  .advantages-item {
+    position: relative;
+    width: calc((100% - 60px) / 3);
+  }
+  .advantages-title {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    color: #212121;
+    text-align: center;
+  }
+  .advantages-item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .label::before {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    bottom: 0;
+  }
+  .label-text {
+    position: absolute;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    bottom: 0;
+    margin: 0;
+    width: 100%;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-align: center;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
 }
 
 /* Team (Команда) */
@@ -1279,9 +1295,6 @@ img {
 
 /* Постоянные клиенты */
 .clients-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -1338,75 +1351,6 @@ img {
 
 .logo-icon {
   fill: #afb1b8;
-}
-
-/* footer (Подвал) */
-.footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2f303a;
-}
-
-.footer .address {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-}
-
-.footer .footer-container {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.footer .footer-link {
-  display: inline-block;
-  margin-top: 9px;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.footer .footer-socials {
-  margin-left: 70px;
-}
-
-.footer .footer-title {
-  margin-top: 12px;
-  margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-
-.footer .futter-sub {
-  margin-left: 93px;
-}
-
-.footer .form-input-footer {
-  margin-right: 12px;
-  width: 358px;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background: #2f303a;
-  font-size: 16px;
-  line-height: 20px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
 }
 
 /* Карточки портфолио */
