--- a/sass/base/_general.scss
+++ b/sass/base/_general.scss
@@ -17,6 +17,18 @@
   margin-left: auto;
   align-content: center;
   vertical-align: baseline;
+
+  @media screen and (min-width: $mobile) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: $tablet) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 1200px;
+  }
 }
 
 .section {
