--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,3 +1,9 @@
+.nav-header {
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
+}
+
 .header {
   border-bottom: 1px solid #ececec;
 
